--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Outfit, sans-serif;
 }
 
 *{
@@ -136,7 +136,7 @@ body{
     align-items: center;
     justify-content: space-evenly;
     margin-bottom: 50px;
-    padding: 0 250px;
+    padding: 0 170px;
 }
 
 .artists-1{
@@ -170,4 +170,76 @@ body{
     width: 300px;
 }
 
+.discography{
+    display: flex;
+}
+
+.discography-1{
+    padding: 50px 100px 100px 100px;
+    width: 50%;
+    background-color: #161616;
+}
+
+.discography-2 {
+    width: 50%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.discography-2 img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.discography-1 h2{
+    font-size: 30px;
+    color: #7d99e7;
+    text-transform: uppercase;
+    margin-bottom: 15px;
+}
+
+.discography-1 h3{
+    font-size: 20px;
+    color: #f7deff;
+    margin-bottom: 15px;
+}
+
+.discography-1 p{
+    font-size: 20px;
+    color: #ffffff;
+    margin-bottom: 25px;
+    text-align: justify;
+}
+
+.social-media ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.social-media ul li a{
+    border: solid 1px #ffffff;
+    color: #ffffff;
+    font-size: 15px;
+    padding: 10px 15px;
+    border-radius: 5px;
+}
+
+.social-media .spotify:hover{
+    border: solid 1px #14bd30;
+    color: #14bd30;
+}
+
+.social-media .apple:hover{
+    border: solid 1px #eb1b48;
+    color: #eb1b48;
+}
+
+.social-media .amazon:hover{    
+    border: solid 1px #e0932d;
+    color: #e0932d;
+}
 
