--- a/style.css
+++ b/style.css
@@ -35,6 +35,13 @@ body{
     justify-content: space-between;
 }
 
+.menu .logo{
+    font-size: 25px;
+    color: rgb(255, 255, 255);
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
 .menu .navbar ul li{
     position: relative;
     float: left;
@@ -49,7 +56,7 @@ body{
 }
 
 .menu .navbar ul li a:hover{
-    color: #e1e9ff;
+    color: #6b92fd;
 }
 
 #menu{
@@ -144,8 +151,8 @@ body{
 }
 
 .artists-1 img{
-    width: 200px;
-    height: 200px;
+    width: 190px;
+    height: 190px;
     border-radius: 50%;
 }
 
@@ -241,5 +248,93 @@ body{
 .social-media .amazon:hover{    
     border: solid 1px #e0932d;
     color: #e0932d;
+}
+
+.phrases{
+    padding: 50px 0;
+    background-color: #000000;
+    text-align: center;
+}
+
+.phrases .phrases-title{
+    font-size: 40px;
+    color: #f7deff;
+    margin-bottom: 15px;
+}   
+
+.phrases .phrases-p{ 
+    font-size: 20px;
+    color: rgb(255, 255, 255);
+    margin-bottom: 15px;
+}   
+
+.phrases-content {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.phrases-1{
+    display: inline-flex;
+    flex-direction: row;
+    padding: 15px 30px;
+    background-color: #6079c0;
+    border: solid  3px #73a7f7;
+    box-shadow: #535353 0px 3px 10px;
+    border-radius: 15px;
+    width: 30vw;
+    text-align:start;
+}
+
+.phrases-1 img{
+    width: 160px;
+    margin: 15px;
+}
+
+.phrases-1 h2{
+    font-size: 20px;
+    color: #ffffff;
+    margin: 15px 0 0 0;
+}
+
+.phrases-1 h3{
+    font-size: 15px;
+    color: #eeeeee;
+    margin-bottom: 15px;
+}
+
+.phrases-1 p{
+    font-size: 15px;
+    color: #000000;
+}
+
+/* Parte responsiva */
+
+@media (max-width: 991px){
+
+    .menu{
+        padding: 20px;
+    }
+
+    .menu label{
+        display: initial;
+    }
+
+    .menu .navbar{
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        background-color: #161616;
+        display: none;
+    }
+
+    .menu .navbar ul li{
+        width: 100%;
+    }
+
+    #menu:checked ~ .navbar{
+        display: initial;
+    }
+
 }
 
